# VTMine-Attendance-Plugin

./: README.md
AttendancePlugin/src/: AttendancePlugin_global.h  CMakeLists.txt  attendance_model.cpp  attendance_model.h  attendance_plugin.cpp  attendance_plugin.h  date_picker.cpp  date_picker.h  date_picker.ui  helpwindow.cpp  helpwindow.h  helpwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  person.cpp  person.h  tesmdl.qmodel
